[tool.poetry]
name = "crud"
version = "0.1.0"
description = ""
authors = ["Igor Silva <igor.silvamf@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^2.0.35"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
pydantic = {extras = ["email"], version = "^2.9.2"}
psycopg2-binary = "^2.9.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
